# Dimeres-Tetrameres

./: .gitignore  LICENSE  README.md  pyproject.toml  test.py  test2.py
dimertetramer/calculations/: constants.py  misc.py  sasa.py
dimertetramer/parsing/: pdb.py
dimertetramer/utils/: customobjs.py
dimtetra.R/: .Rprofile
dimtetra.R/notebooks/: Rapport.Rmd  ancestrales_vs_recentes.Rmd  references.bib  statistics.Rmd  validation-croisee.Rmd
dimtetra.R/src/: misc_io.R  pretty_tables.R
notebooks/: Exploration.ipynb
scripts/: extract_metrics.py  new_proportions.py  test2.py
tests/: test_dimertetramer.py
