[tool.poetry]
name = "DimerTetramer"
version = "0.1.0"
description = ""
authors = ["Gustavo Magaña López <gmaganna.biomed@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
biopython = "^1.78"
matplotlib = "^3.4.1"
pandas = "^1.2.4"
freesasa = "^2.1.0"
nglview = "^3.0.1"
rpy2 = "^3.4.4"
scikit-learn = "^0.24.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.7.4"
black = "^20.8b1"
ipython = "^7.22.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
